--- a/index1.html
+++ b/index1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PORTFOLIO</title>
+    <title>Princess Sarah Nuga</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/fbf15e9077.js"></script>
 </head>
@@ -38,7 +38,7 @@
             <a href="http://www.linkedin.com/in/john-ogunnusi-74bb642a7">
                 <i class="fab fa-twitter-square"></i>
             </a>
-            <a href="#">
+            <a href="https://www.tiktok.com/@habbycoco?is_from_webapp=1&sender_device=pc">
                 <i class="fa-brands fa-tiktok"></i>
             </a>
             <a href="https://wa.me/+2348081761378">
@@ -75,7 +75,7 @@
     <div class="services-container">
         <div class="service-box">
             <div class="service-info">
-                <i class="fa-solid fa-mobile"></i>
+                <i class="fa-regular fa-user"></i>
                 <h4>Entrepreneur</h4>
                 <p>ij ije wejo e k kw kdw kd kkdo kdjdjod kd pok ko d pkod ojdod jked jd pjoejpjkoe dpoedpjoed pjoedpko dpjod pkodpkod pko pkodpkoe pjoepoe poe pjoe pkoe pkod koed pkoedpkoed pkoed pko pkoepkoed pkoed koedpkoe koe pkoed pkoekoed pkodpko pkoed pkoed  pkod pkoed pkoed pkod pkoed pk[ koed  pkoedkeded ed pko pkoeded koed pkoed p pko pko pkoopi 2euj0ije ifj 0f ije 0je0j9f 09jf 9je 9je oje fje 09jef0 oejkf9 oif9 jfkfoekf oefofo jkf ikfik f0ik rfik ff 0j9kpo jkef pkoe fopfoef</p>
             </div>
@@ -84,7 +84,7 @@
         <div class="services-container">
             <div class="service-box">
                 <div class="service-info">
-                    <i class="fa-solid fa-mobile"></i>
+                    <i class="fa-regular fa-user"></i>
                     <h4>Hair Stylist</h4>
                     <p>ij ije wejo e k kw kdw kd kkdo kdjdjod kd pok ko d pkod ojdod jked jd pjoejpjkoe dpoedpjoed pjoedpko dpjod pkodpkod pko pkodpkoe pjoepoe poe pjoe pkoe pkod koed pkoedpkoed pkoed pko pkoepkoed pkoed koedpkoe koe pkoed pkoekoed pkodpko pkoed pkoed  pkod pkoed pkoed pkod pkoed pk[ koed  pkoedkeded ed pko pkoeded koed pkoed p pko pko pkoopi 2euj0ije ifj 0f ije 0je0j9f 09jf 9je 9je oje fje 09jef0 oejkf9 oif9 jfkfoekf oefofo jkf ikfik f0ik rfik ff 0j9kpo jkef pkoe fopfoef</p>
                 </div>
@@ -92,7 +92,7 @@
 
         <div class="service-box">
             <div class="service-info">
-                <i class="fa-solid fa-code"></i>
+                <i class="fa-regular fa-user"></i>
                 <h4>Fashion Model</h4>
                 <p>ij ije wejo e k kw kdw kd kkdo kdjdjod kd pok ko d pkod ojdod jked jd pjoejpjkoe dpoedpjoed pjoedpko dpjod pkodpkod pko pkodpkoe pjoepoe poe pjoe pkoe pkod koed pkoedpkoed pkoed pko pkoepkoed pkoed koedpkoe koe pkoed pkoekoed pkodpko pkoed pkoed  pkod pkoed pkoed pkod pkoed pk[ koed  pkoedkeded ed pko pkoeded koed pkoed p pko pko pkoopi 2euj0ije ifj 0f ije 0je0j9f 09jf 9je 9je oje fje 09jef0 oejkf9 oif9 jfkfoekf oefofo jkf ikfik f0ik rfik ff 0j9kpo jkef pkoe fopfoef</p>
             </div>
@@ -100,7 +100,7 @@
 
         <div class="service-box">
             <div class="service-info">
-                <i class="fa-solid fa-code"></i>
+                <i class="fa-regular fa-user"></i>
                 <h4>Makeup Artist</h4>
                 <p>ij ije wejo e k kw kdw kd kkdo kdjdjod kd pok ko d pkod ojdod jked jd pjoejpjkoe dpoedpjoed pjoedpko dpjod pkodpkod pko pkodpkoe pjoepoe poe pjoe pkoe pkod koed pkoedpkoed pkoed pko pkoepkoed pkoed koedpkoe koe pkoed pkoekoed pkodpko pkoed pkoed  pkod pkoed pkoed pkod pkoed pk[ koed  pkoedkeded ed pko pkoeded koed pkoed p pko pko pkoopi 2euj0ije ifj 0f ije 0je0j9f 09jf 9je 9je oje fje 09jef0 oejkf9 oif9 jfkfoekf oefofo jkf ikfik f0ik rfik ff 0j9kpo jkef pkoe fopfoef</p>
             </div>
@@ -108,7 +108,7 @@
 
         <div class="service-box">
             <div class="service-info">
-                <i class="fa-solid fa-code"></i>
+                <i class="fa-regular fa-user"></i>
                 <h4>Content Creator</h4>
                 <p>ij ije wejo e k kw kdw kd kkdo kdjdjod kd pok ko d pkod ojdod jked jd pjoejpjkoe dpoedpjoed pjoedpko dpjod pkodpkod pko pkodpkoe pjoepoe poe pjoe pkoe pkod koed pkoedpkoed pkoed pko pkoepkoed pkoed koedpkoe koe pkoed pkoekoed pkodpko pkoed pkoed  pkod pkoed pkoed pkod pkoed pk[ koed  pkoedkeded ed pko pkoeded koed pkoed p pko pko pkoopi 2euj0ije ifj 0f ije 0je0j9f 09jf 9je 9je oje fje 09jef0 oejkf9 oif9 jfkfoekf oefofo jkf ikfik f0ik rfik ff 0j9kpo jkef pkoe fopfoef</p>
             </div>
@@ -208,7 +208,7 @@
 
    <section class="contact" id="contact">
     <h2 class="heading">Contact <span>Me</span></h2>
-    <form action="mailto:johnogunnusi2019@gmail.com" method="post" enctype="text/plain">
+    <form action="https://formspree.io/f/xovajjap" method="post">
         <div class="input-group">
             <div class="input-box">
                 <label for="name"></label>
@@ -221,7 +221,7 @@
             </div>
         </div>
         <div class="input-group-2">
-            <textarea name="yourMessage" id="yourMessage" cols="30" rows="10" placeholder="Your Message" required></textarea>
+            <textarea name="message" id="yourMessage" cols="30" rows="10" placeholder="Your Message" required></textarea>
             <input type="submit" value="Send Message" class="btn">
         </div>
     </form>
@@ -238,10 +238,10 @@
         <a href="#">
             <i class="fab fa-linkedin"></i>
         </a>
-        <a href="#">
-            <i class="fab fa-twitter-square"></i>
+        <a href="https://www.tiktok.com/@habbycoco?is_from_webapp=1&sender_device=pc">
+            <i class="fab fa-tiktok"></i>
         </a>
-        <a href="https://wa.me/+2348119833748">
+        <a href="https://wa.me/+2348081761378">
             <i class="fa-brands fa-square-whatsapp"></i>
         </a>
     </div>
