--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body> 
     <section>
         <video class="video" src="ssmmookkee_s7PXCGXV.mp4" muted autoplay></video>
-        <a href="profile.html">
+        <a href="index1.html">
             <h1 class="smoke">
             <span>P</span>
             <span>R</span>
