--- a/index1.html
+++ b/index1.html
@@ -77,7 +77,7 @@
             <div class="service-info">
                 <i class="fa-regular fa-user"></i>
                 <h4>Entrepreneur</h4>
-                <p>ij ije wejo e k kw kdw kd kkdo kdjdjod kd pok ko d pkod ojdod jked jd pjoejpjkoe dpoedpjoed pjoedpko dpjod pkodpkod pko pkodpkoe pjoepoe poe pjoe pkoe pkod koed pkoedpkoed pkoed pko pkoepkoed pkoed koedpkoe koe pkoed pkoekoed pkodpko pkoed pkoed  pkod pkoed pkoed pkod pkoed pk[ koed  pkoedkeded ed pko pkoeded koed pkoed p pko pko pkoopi 2euj0ije ifj 0f ije 0je0j9f 09jf 9je 9je oje fje 09jef0 oejkf9 oif9 jfkfoekf oefofo jkf ikfik f0ik rfik ff 0j9kpo jkef pkoe fopfoef</p>
+                <p>As an Entrepreneur, i help develop business plans that outline your vision, mission, goals, and strategies for the success of your business. I can also create and implement marketing strategies to promote your offerings and reach potential customers. I help to identify and address issues that arise in the course of running a business, often requiring quick thinking and adaptability.  An an Entrepreneur i can pitch your ideas to investors, stakeholders, and customers to gain support and drive the success of your ventures.</p>
             </div>
         </div>
 
