--- a/index1.html
+++ b/index1.html
@@ -17,7 +17,7 @@
          <a href="#home">Home</a>
          <a href="#about">About</a>
          <a href="#services">Services</a>
-         <a href="#skills">Skills</a>
+         <a href="#skills">Skilljs</a>
          <a href="#education">Education</a>
          <a href="#contact">Contact</a>
        </nav>
