--- a/index1.html
+++ b/index1.html
@@ -17,7 +17,7 @@
          <a href="#home">Home</a>
          <a href="#about">About</a>
          <a href="#services">Services</a>
-         <a href="#skills">Skilljs</a>
+         <a href="#skills">Skills</a>
          <a href="#education">Education</a>
          <a href="#contact">Contact</a>
        </nav>
@@ -81,12 +81,12 @@
             </div>
         </div>
 
-        <div class="services-container">
+         <div class="services-container">
             <div class="service-box">
                 <div class="service-info">
                     <i class="fa-regular fa-user"></i>
                     <h4>Hair Stylist</h4>
-                    <p>ij ije wejo e k kw kdw kd kkdo kdjdjod kd pok ko d pkod ojdod jked jd pjoejpjkoe dpoedpjoed pjoedpko dpjod pkodpkod pko pkodpkoe pjoepoe poe pjoe pkoe pkod koed pkoedpkoed pkoed pko pkoepkoed pkoed koedpkoe koe pkoed pkoekoed pkodpko pkoed pkoed  pkod pkoed pkoed pkod pkoed pk[ koed  pkoedkeded ed pko pkoeded koed pkoed p pko pko pkoopi 2euj0ije ifj 0f ije 0je0j9f 09jf 9je 9je oje fje 09jef0 oejkf9 oif9 jfkfoekf oefofo jkf ikfik f0ik rfik ff 0j9kpo jkef pkoe fopfoef</p>
+                    <p>As a hair stylist we provide a range of services that include cutting, coloring, and styling hair to create personalized looks for you. We offer consultations to determine suitable styles based on hair type and client preferences, ensuring a tailored experience. Additionally, I provide hair treatments to improve health and texture, as well as special services like extensions and event styling. By staying current with trends and techniques, we help clients achieve their desired appearance while promoting overall hair care and maintenance</p>
                 </div>
             </div>
 
@@ -94,7 +94,7 @@
             <div class="service-info">
                 <i class="fa-regular fa-user"></i>
                 <h4>Fashion Model</h4>
-                <p>ij ije wejo e k kw kdw kd kkdo kdjdjod kd pok ko d pkod ojdod jked jd pjoejpjkoe dpoedpjoed pjoedpko dpjod pkodpkod pko pkodpkoe pjoepoe poe pjoe pkoe pkod koed pkoedpkoed pkoed pko pkoepkoed pkoed koedpkoe koe pkoed pkoekoed pkodpko pkoed pkoed  pkod pkoed pkoed pkod pkoed pk[ koed  pkoedkeded ed pko pkoeded koed pkoed p pko pko pkoopi 2euj0ije ifj 0f ije 0je0j9f 09jf 9je 9je oje fje 09jef0 oejkf9 oif9 jfkfoekf oefofo jkf ikfik f0ik rfik ff 0j9kpo jkef pkoe fopfoef</p>
+                <p>As a Fashion model i showcases clothing and accessories, bringing designers' visions to life during runway shows and photo shoots and your looks in particular. We participate in promotional events, helping brands connect with their target audience through visual representation. Models also collaborate with photographers, stylists, and makeup artists to create compelling imagery for advertising campaigns and editorial spreads. Additionally, we may be involved in social media promotions, using their platforms to influence trends and engage with fans.</p>
             </div>
         </div>
 
@@ -102,15 +102,17 @@
             <div class="service-info">
                 <i class="fa-regular fa-user"></i>
                 <h4>Makeup Artist</h4>
-                <p>ij ije wejo e k kw kdw kd kkdo kdjdjod kd pok ko d pkod ojdod jked jd pjoejpjkoe dpoedpjoed pjoedpko dpjod pkodpkod pko pkodpkoe pjoepoe poe pjoe pkoe pkod koed pkoedpkoed pkoed pko pkoepkoed pkoed koedpkoe koe pkoed pkoekoed pkodpko pkoed pkoed  pkod pkoed pkoed pkod pkoed pk[ koed  pkoedkeded ed pko pkoeded koed pkoed p pko pko pkoopi 2euj0ije ifj 0f ije 0je0j9f 09jf 9je 9je oje fje 09jef0 oejkf9 oif9 jfkfoekf oefofo jkf ikfik f0ik rfik ff 0j9kpo jkef pkoe fopfoef</p>
+                <p>A makeup artist specializes in applying makeup to enhance or transform a client's appearance for various occasions, including special events, photoshoots, and runway shows. They possess expertise in color matching, skin types, and techniques to create looks ranging from natural beauty to dramatic effects. Makeup artists also collaborate with photographers, stylists, and models to achieve the desired aesthetic for fashion campaigns and editorial work. Additionally, we offer makeup consultations and teach techniques to clients, empowering them to achieve their desired looks at home.
+                </p>
             </div>
-        </div>
+        </div>  
 
         <div class="service-box">
             <div class="service-info">
                 <i class="fa-regular fa-user"></i>
                 <h4>Content Creator</h4>
-                <p>ij ije wejo e k kw kdw kd kkdo kdjdjod kd pok ko d pkod ojdod jked jd pjoejpjkoe dpoedpjoed pjoedpko dpjod pkodpkod pko pkodpkoe pjoepoe poe pjoe pkoe pkod koed pkoedpkoed pkoed pko pkoepkoed pkoed koedpkoe koe pkoed pkoekoed pkodpko pkoed pkoed  pkod pkoed pkoed pkod pkoed pk[ koed  pkoedkeded ed pko pkoeded koed pkoed p pko pko pkoopi 2euj0ije ifj 0f ije 0je0j9f 09jf 9je 9je oje fje 09jef0 oejkf9 oif9 jfkfoekf oefofo jkf ikfik f0ik rfik ff 0j9kpo jkef pkoe fopfoef</p>
+                <p>I produce engaging and original material, including videos, blogs, social media posts, and podcasts, tailored to their target audience. I actively use platforms like YouTube, Instagram, TikTok, and blogs to share my work and build a community around my interests and expertise. I often engage in storytelling, tutorials, reviews, and lifestyle content, ensuring their material resonates with viewers and followers. Additionally, we may collaborate with brands for sponsored content, leveraging their influence to promote products or services while maintaining authenticity with their audience.
+                </p>
             </div>
         </div>
     </div>
