--- a/index1.html
+++ b/index1.html
@@ -111,7 +111,7 @@
             <div class="service-info">
                 <i class="fa-regular fa-user"></i>
                 <h4>Content Creator</h4>
-                <p>I produce engaging and original material, including videos, blogs, social media posts, and podcasts, tailored to their target audience. I actively use platforms like YouTube, Instagram, TikTok, and blogs to share my work and build a community around my interests and expertise. I often engage in storytelling, tutorials, reviews, and lifestyle content, ensuring their material resonates with viewers and followers. Additionally, we may collaborate with brands for sponsored content, leveraging their influence to promote products or services while maintaining authenticity with their audience.
+                <p>I produce engaging and original material, including videos, blogs, social media posts, and podcasts, tailored to their target audience. I actively use platforms like YouTube, Instagram, TikTok, and blogs to share my work and build a community around my interests and expertise. I often engage in storytelling, tutorials, reviews, and lifestyle content, ensuring their material resonates with viewers and followers.
                 </p>
             </div>
         </div>
