--- a/index1.html
+++ b/index1.html
@@ -19,6 +19,7 @@
          <a href="#services">Services</a>
          <a href="#skills">Skills</a>
          <a href="#education">Education</a>
+         <a href="#testimonials">Testimonials</a>
          <a href="#contact">Contact</a>
        </nav>
    </header>
@@ -69,7 +70,7 @@
         </div>
     </div>
 </section>
-   <section class="services" id="services">
+<section class="services" id="services">
     <h2 class="heading">Services</h2>
 
     <div class="services-container">
@@ -177,36 +178,90 @@
     <h2 class="heading">Education</h2>
     <div class="timeline-items">
 
-        <div class="timeline-items">
+        <div class="timeline-item">
             <div class="timeline-dot"></div>
-            <div class="timeline-date">2019</div>
+            <div class="timeline-date">2012</div>
             <div class="timeline-content">
-                <h3>High School</h3>
+                <h3>Elementary School</h3>
                 <p>ujd eijei jjcijcrc jrcrjcjrm cir crkcrkc rckrcikrck rck rckrckrck rck rck rckr crk crkc ckck rck rck kc fkc,fc fmcfcmficm cmifm</p>
             </div>
         </div>
 
-        <div class="timeline-items">
+        <div class="timeline-item">
             <div class="timeline-dot"></div>
-            <div class="timeline-date">2022</div>
+            <div class="timeline-date">2012-2016</div>
             <div class="timeline-content">
-                <h3>High School</h3>
+                <h3>Middle School</h3>
                 <p>ujd eijei jjcijcrc jrcrjcjrm cir crkcrkc rckrcikrck rck rckrckrck rck rck rckr crk crkc ckck rck rck kc fkc,fc fmcfcmficm cmifm</p>
             </div>
         </div>
 
-        <div class="timeline-items">
+        <div class="timeline-item">
             <div class="timeline-dot"></div>
-            <div class="timeline-date">2023</div>
+            <div class="timeline-date">2016-2020</div>
             <div class="timeline-content">
                 <h3>High School</h3>
-                <p>ujd eijei jjcijcrc jrcrjcjrm cir crkcrkc rckrcikrck rck rckrckrck rck rck rckr crk crkc ckck rck rck kc fkc,fc fmcfcmficm cmifm</p>
+                <p>Attended ... Secondary School </p>
+            </div>
+        </div>
+
+        <div class="timeline-item">
+            <div class="timeline-dot"></div>
+            <div class="timeline-date">2020-2024</div>
+            <div class="timeline-content">
+                <h3>College</h3>
+                <p>Studied a 4 years course of ... to obtain a certificate as a ... at Caleb University Imota, Ikorodu, Lagos.</p>
             </div>
         </div>
 
     </div>
    </section>
    
+
+   <section class="testimonials" id="testimonials">
+    <div class="testimonials-box">
+        <h2 class="heading">Testimonials</h2>
+        <div class="wrapper">
+            <div class="testimonial-item">
+                <img src="test.jpg" alt="">
+                <h2>Daniel Smith</h2>
+                <div class="rating">
+                    <i class="fa-solid fa-star" id="star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                </div>
+                <p>Lorem ipsum dolor sit amet consecutor adipiscing elit. Perferendis ab exercitatioem similiquue odio commodi. Baetae, laborisum mangi provident aspernatur magnam esse, dolore veritas et dolorisum saepe adispci sint nesticus totam?</p>
+            </div>
+
+            <div class="testimonial-item">
+                <img src="test.jpg" alt="">
+                <h2>Daniel Smith</h2>
+                <div class="rating">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                </div>
+                <p>Lorem ipsum dolor sit amet consecutor adipiscing elit. Perferendis ab exercitatioem similiquue odio commodi. Baetae, laborisum mangi provident aspernatur magnam esse, dolore veritas et dolorisum saepe adispci sint nesticus totam?</p>
+            </div>
+
+            <div class="testimonial-item">
+                <img src="test.jpg" alt="">
+                <h2>Daniel Smith</h2>
+                <div class="rating">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                </div>
+                <p>Lorem ipsum dolor sit amet consecutor adipiscing elit. Perferendis ab exercitatioem similiquue odio commodi. Baetae, laborisum mangi provident aspernatur magnam esse, dolore veritas et dolorisum saepe adispci sint nesticus totam?</p>
+            </div>
+        </div>
+    </div>
+   </section>
+
+
 
    <section class="contact" id="contact">
     <h2 class="heading">Contact <span>Me</span></h2>
@@ -253,18 +308,18 @@
             <a href="#">FAQ</a>
         </li>
         <li>
-            <a href="">Services</a>
+            <a href="#services">Services</a>
         </li>
         <li>
-            <a href="">About</a>
+            <a href="#about">About</a>
         </li>
         <li>
-            <a href="">Contact</a>
+            <a href="#contact">Contact</a>
         </li>
     </ul>
 
     <p class="copyright">
-        <i class="fa-solid fa-copyright"></i> JOHN OGUNNUSI | All Rights Reserved
+        <i class="fa-solid fa-copyright"></i> PRINCESS SARAH NUGA | All Rights Reserved
     </p>
 </footer>
 
