--- a/index1.html
+++ b/index1.html
@@ -175,7 +175,7 @@
    </section>
 
    <section class="timeline-section" id="education">
-    <h2 class="heading">Education</h2>
+    <h2 class="edu-heading">Education</h2>
     <div class="timeline-items">
 
         <div class="timeline-item">
@@ -236,18 +236,19 @@
             </div>
 
             <div class="testimonial-item">
-                <img src="test.jpg" alt="">
-                <h2>Daniel Smith</h2>
+                <img src="taiwo.png" alt="">
+                <h2>Taiwo Adebayo</h2>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
                 </div>
-                <p>Lorem ipsum dolor sit amet consecutor adipiscing elit. Perferendis ab exercitatioem similiquue odio commodi. Baetae, laborisum mangi provident aspernatur magnam esse, dolore veritas et dolorisum saepe adispci sint nesticus totam?</p>
+                <p>I must say Princess is the best of all the people i've met for as a makeup artist and fashion model. I had to make her incharge of my wardrobe and my looks and ever since ive been getting compliments that my dressing is alway up to date. Thank you Princess </p>
             </div>
 
             <div class="testimonial-item">
-                <img src="test.jpg" alt="">
+                <img src="jayk.jpg" alt="">
                 <h2>Daniel Smith</h2>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
@@ -255,7 +256,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-stroke"></i>
                 </div>
-                <p>Lorem ipsum dolor sit amet consecutor adipiscing elit. Perferendis ab exercitatioem similiquue odio commodi. Baetae, laborisum mangi provident aspernatur magnam esse, dolore veritas et dolorisum saepe adispci sint nesticus totam?</p>
+                <p>Princess is the best i've met so far. Apart from the fact that she dresses so well, she also makes sure that her customer dress no less than her. I've gotten alot of good talk concerning my dressing and my bsiness im working on. She helped as an Entrepreneur and a Fashion enthusiast. Thank you Princess. You're the best </p>
             </div>
         </div>
     </div>
