--- a/index1.html
+++ b/index1.html
@@ -232,7 +232,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                 </div>
-                <p>Lorem ipsum dolor sit amet consecutor adipiscing elit. Perferendis ab exercitatioem similiquue odio commodi. Baetae, laborisum mangi provident aspernatur magnam esse, dolore veritas et dolorisum saepe adispci sint nesticus totam?</p>
+                <p>She has helped alot in my business, fashion look, my social media posts, ive gone far in them all thanks to her. Thank you so much</p>
             </div>
 
             <div class="testimonial-item">
@@ -249,7 +249,7 @@
 
             <div class="testimonial-item">
                 <img src="jayk.jpg" alt="">
-                <h2>Daniel Smith</h2>
+                <h2>john Ogunnsui</h2>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
