--- a/index1.html
+++ b/index1.html
@@ -224,7 +224,7 @@
         <div class="wrapper">
             <div class="testimonial-item">
                 <img src="test.jpg" alt="">
-                <h2>Daniel Smith</h2>
+                <h2>Praise Gabriel</h2>
                 <div class="rating">
                     <i class="fa-solid fa-star" id="star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -232,12 +232,12 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                 </div>
-                <p>She has helped alot in my business, fashion look, my social media posts, ive gone far in them all thanks to her. Thank you so much</p>
+                <p>She has helped alot in my business, fashion look, my social media posts, ive gone far in them all thanks to her. Thank you so much.</p>
             </div>
 
             <div class="testimonial-item">
-                <img src="taiwo.png" alt="">
-                <h2>Taiwo Adebayo</h2>
+                <img src="kehinde.jpg" alt="">
+                <h2>Kehinde Adebayo</h2>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -248,8 +248,8 @@
             </div>
 
             <div class="testimonial-item">
-                <img src="jayk.jpg" alt="">
-                <h2>john Ogunnsui</h2>
+                <img src="taiwo.png" alt="">
+                <h2>Taiwo Adebayo</h2>
                 <div class="rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -257,6 +257,19 @@
                     <i class="fa-solid fa-star-half-stroke"></i>
                 </div>
                 <p>Princess is the best i've met so far. Apart from the fact that she dresses so well, she also makes sure that her customer dress no less than her. I've gotten alot of good talk concerning my dressing and my bsiness im working on. She helped as an Entrepreneur and a Fashion enthusiast. Thank you Princess. You're the best </p>
+            </div>
+
+            <div class="testimonial-item">
+                <img src="meee.jpg" alt="">
+                <h2>John Ogunnusi</h2>
+                <div class="rating">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                </div>
+                <p>Princess is the best i've met in all the people ive met for my dress sense. She has the trending fashion sense and the business mind at the same time. Thank you for your help on me so far </p>
             </div>
         </div>
     </div>
