--- a/index1.html
+++ b/index1.html
@@ -243,6 +243,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
                 </div>
                 <p>I must say Princess is the best of all the people i've met for as a makeup artist and fashion model. I had to make her incharge of my wardrobe and my looks and ever since ive been getting compliments that my dressing is alway up to date. Thank you Princess </p>
             </div>
@@ -255,6 +256,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-stroke"></i>
+                    <i class="fa-regular fa-star"></i>
                 </div>
                 <p>Princess is the best i've met so far. Apart from the fact that she dresses so well, she also makes sure that her customer dress no less than her. I've gotten alot of good talk concerning my dressing and my bsiness im working on. She helped as an Entrepreneur and a Fashion enthusiast. Thank you Princess. You're the best </p>
             </div>
