--- a/index1.html
+++ b/index1.html
@@ -95,7 +95,7 @@
             <div class="service-info">
                 <i class="fa-regular fa-user"></i>
                 <h4>Fashion Model</h4>
-                <p>As a Fashion model i showcases clothing and accessories, bringing designers' visions to life during runway shows and photo shoots and your looks in particular. We participate in promotional events, helping brands connect with their target audience through visual representation. Models also collaborate with photographers, stylists, and makeup artists to create compelling imagery for advertising campaigns and editorial spreads. Additionally, we may be involved in social media promotions, using their platforms to influence trends and engage with fans.</p>
+                <p>As a Fashion model i showcase clothing and accessories, bringing designers' visions to life during runway shows and photo shoots and your looks in particular. We participate in promotional events, helping brands connect with their target audience through visual representation. Our models also collaborate with photographers, stylists, and makeup artists to create compelling imagery for advertising campaigns and editorial spreads. Additionally, we may be involved in social media promotions, using their platforms to influence trends and engage with fans.</p>
             </div>
         </div>
 
@@ -103,7 +103,7 @@
             <div class="service-info">
                 <i class="fa-regular fa-user"></i>
                 <h4>Makeup Artist</h4>
-                <p>A makeup artist specializes in applying makeup to enhance or transform a client's appearance for various occasions, including special events, photoshoots, and runway shows. They possess expertise in color matching, skin types, and techniques to create looks ranging from natural beauty to dramatic effects. Makeup artists also collaborate with photographers, stylists, and models to achieve the desired aesthetic for fashion campaigns and editorial work. Additionally, we offer makeup consultations and teach techniques to clients, empowering them to achieve their desired looks at home.
+                <p>As a makeup artist, I specialize in applying makeup to enhance and transform a client's appearance for various occasions, including special events, photoshoots, and runway shows. We possess expertise in color matching, skin types, and techniques to create looks ranging from natural beauty to dramatic effects. As a makeup artist, I collaborate with photographers, stylists, and models to achieve the desired aesthetic for fashion campaigns and editorial work. Additionally, we offer makeup consultations and teach techniques to clients, empowering them to achieve their desired looks at home.
                 </p>
             </div>
         </div>  
@@ -232,7 +232,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                 </div>
-                <p>She has helped alot in my business, fashion look, my social media posts, ive gone far in them all thanks to her. Thank you so much.</p>
+                <p>She has helped alot in my business, fashion look, my social media posts, i've gone far in them all thanks to her. Thank you so much.</p>
             </div>
 
             <div class="testimonial-item">
@@ -255,7 +255,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <i class="fa-regular fa-star"></i>
                     <i class="fa-regular fa-star"></i>
                 </div>
                 <p>Princess is the best i've met so far. Apart from the fact that she dresses so well, she also makes sure that her customer dress no less than her. I've gotten alot of good talk concerning my dressing and my bsiness im working on. She helped as an Entrepreneur and a Fashion enthusiast. Thank you Princess. You're the best </p>
@@ -271,7 +271,7 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-stroke"></i>
                 </div>
-                <p>Princess is the best i've met in all the people ive met for my dress sense. She has the trending fashion sense and the business mind at the same time. Thank you for your help on me so far </p>
+                <p>Princess is the best I met so far. She has the trending fashion sense and the business mind at the same time. Thank you for your help on me so far </p>
             </div>
         </div>
     </div>
