--- a/index1.html
+++ b/index1.html
@@ -87,7 +87,7 @@
                 <div class="service-info">
                     <i class="fa-regular fa-user"></i>
                     <h4>Hair Stylist</h4>
-                    <p>As a hair stylist we provide a range of services that include cutting, coloring, and styling hair to create personalized looks for you. We offer consultations to determine suitable styles based on hair type and client preferences, ensuring a tailored experience. Additionally, I provide hair treatments to improve health and texture, as well as special services like extensions and event styling. By staying current with trends and techniques, we help clients achieve their desired appearance while promoting overall hair care and maintenance</p>
+                    <p>As a hair stylist, I provide a range of services that include cutting, coloring, and styling hair to create personalized looks for you. We offer consultations to determine suitable styles based on hair type and client preferences, ensuring a tailored experience. Additionally, I provide hair treatments to improve health and texture, as well as special services like extensions and event styling. By staying current with trends and techniques, we help clients achieve their desired appearance while promoting overall hair care and maintenance</p>
                 </div>
             </div>
 
@@ -95,7 +95,7 @@
             <div class="service-info">
                 <i class="fa-regular fa-user"></i>
                 <h4>Fashion Model</h4>
-                <p>As a Fashion model i showcase clothing and accessories, bringing designers' visions to life during runway shows and photo shoots and your looks in particular. We participate in promotional events, helping brands connect with their target audience through visual representation. Our models also collaborate with photographers, stylists, and makeup artists to create compelling imagery for advertising campaigns and editorial spreads. Additionally, we may be involved in social media promotions, using their platforms to influence trends and engage with fans.</p>
+                <p>As a Fashion model, I showcase clothing and accessories, bringing designers' visions to life during runway shows and photo shoots and your looks in particular. We participate in promotional events, helping brands connect with their target audience through visual representation. Our models also collaborate with photographers, stylists, and makeup artists to create compelling imagery for advertising campaigns and editorial spreads. Additionally, we may be involved in social media promotions, using their platforms to influence trends and engage with fans.</p>
             </div>
         </div>
 
