--- a/index.html
+++ b/index.html
@@ -66,12 +66,13 @@
         <div class="read-more-content" style="display: none;">
             <p>I love being a web developer because it allows me to bring ideas to life through code. Whether it’s crafting clean, <br>responsive interfaces or building robust back-end systems, the process of problem-solving and creating seamless digital experiences is what drives me. <br>
 
-                My curiosity and passion for technology keep me constantly exploring new frameworks, languages, and design trends. From front-end technologies like HTML5, CSS3, <br>JavaScript to back-end development with Node.js and databases, I’m always learning and adapting to the fast-paced tech world. Staying on top of industry <br> trends and finding innovative solutions to complex problems is what keeps me excited about this field.
-            
-                I’m always excited to work on new, challenging projects that push my skills further. <br> Whether you're looking for a simple landing page or a fully responsive web application, I would love to help bring your ideas to life. Let’s create something amazing together!</p>
+                My curiosity and passion for technology keep me constantly exploring new frameworks, languages, and design trends. From front-end technologies like HTML5, CSS3, <br>JavaScript I’m always learning and adapting to the fast-paced tech world.
+            </p>
         </div>
     </div>
 </section>
+
+
 <section class="services" id="services">
     <h2 class="heading">Services</h2>
 
@@ -80,7 +81,7 @@
             <div class="service-info">
                 <i class="fa-regular fa-user"></i>
                 <h4>Web Developer</h4>
-                <p>As a Web Developer, I specialize in building responsive, user-friendly websites that align with your business goals. I create clean, efficient code to bring your ideas to life, ensuring optimal performance and seamless user experiences. From front-end design to back-end development, I work to implement solutions that drive engagement and support business growth. I’m committed to staying updated with the latest technologies and best practices to deliver modern and effective web solutions.</p>
+                <p>As a Web Developer, I build responsive, user-friendly websites that align with your business goals. I focus on clean code, optimal performance, and seamless user experiences. From front-end to back-end, I create solutions that drive engagement and growth, staying updated with the latest technologies and best practices.</p>
         </div>
         </div>
 
@@ -89,7 +90,7 @@
             <div class="service-info">
                 <i class="fa-regular fa-user"></i>
                 <h4>Web Designer</h4>
-                <p>As a Web Designer, I craft visually engaging and intuitive website interfaces that enhance user experience. I focus on creating clean, modern, and responsive designs that are not only aesthetically pleasing but also aligned with your brand identity. By combining creativity with user-centered design principles, I ensure that every website I design is functional, accessible, and optimized for all devices. My goal is to make your online presence stand out while delivering a seamless and enjoyable user journey.</p>
+                <p>As a Web Designer, I create visually engaging, modern, and responsive interfaces that enhance user experience and align with your brand. By combining creativity with user-centered design, I ensure every website is functional, accessible, and optimized for all devices, delivering a seamless online presence.</p>
 
             </div>
         </div>
@@ -98,7 +99,7 @@
             <div class="service-info">
                 <i class="fa-regular fa-user"></i>
                 <h4>Tech Enthusiast</h4>
-                <p>As a Tech Enthusiast, I am passionate about exploring and staying updated with the latest advancements in technology. I am constantly learning new tools, trends, and innovations across various fields such as web development, artificial intelligence, and cloud computing. My curiosity drives me to experiment with emerging technologies and find ways to integrate them into my projects. I love sharing my knowledge, collaborating on tech initiatives, and contributing to the dynamic world of technology.</p>
+                <p>As a Tech Enthusiast, I’m passionate about staying updated with the latest tech advancements. I continuously explore new tools, trends, and innovations in web development, AI, and cloud computing. My curiosity drives me to experiment with emerging technologies and integrate them into my projects, while sharing knowledge and collaborating in the dynamic tech space.</p>
             </div>
         </div>  
 
