--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="service-info">
                 <i class="fa-regular fa-user"></i>
                 <h4>Music Production and Web Development</h4> 
-                <p>Music production and web development both involve crafting details to create seamless experiences. Each requires technical skill and attention to detail—balancing sounds in music parallels combining design elements in web development. Both fields demand innovation and precision to resonate with their audience.</p>
+                <p>Music production and web development both craft seamless experiences, requiring technical skill and attention to detail. Balancing sounds in music parallels combining design elements in web development, with both fields demanding innovation and precision to resonate with their audience.</p>
             </div>
         </div>
 
@@ -116,7 +116,7 @@
                 <div class="service-info">
                     <i class="fa-regular fa-user"></i>
                     <h4>Fashion Designer</h4>
-                    <p>Fashion design and web development share creativity, structure, and user experience. Just as a designer selects fabrics and patterns, a web developer uses coding and design to create engaging websites. Both require an eye for aesthetics and an understanding of user interaction, aiming to produce visually striking and functional creations tailored to individual needs.</p>
+                    <p>Fashion design and web development share creativity, structure, and user experience. Designers select fabrics while web developers use coding to create engaging websites. Both require aesthetic sensibility and an understanding of user interaction, aiming for visually striking and functional creations tailored to individual needs.</p>
                 </div>
             </div>
     </div>
