--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="service-info">
                 <i class="fa-regular fa-user"></i>
                 <h4>Music Production and Web Development</h4> 
-                <p>Music production and web development both craft seamless experiences, requiring technical skill and attention to detail. Balancing sounds in music parallels combining design elements in web development, with both fields demanding innovation and precision to resonate with their audience.</p>
+                <p>Music production and web development create seamless experiences, both requiring technical skill and detail. Balancing sounds parallels combining design elements, with both demanding innovation and precision to engage their audience.</p>
             </div>
         </div>
 
@@ -116,7 +116,8 @@
                 <div class="service-info">
                     <i class="fa-regular fa-user"></i>
                     <h4>Fashion Designer</h4>
-                    <p>Fashion design and web development share creativity, structure, and user experience. Designers select fabrics while web developers use coding to create engaging websites. Both require aesthetic sensibility and an understanding of user interaction, aiming for visually striking and functional creations tailored to individual needs.</p>
+                    <p>Fashion design and web development focus on creativity and user experience. Designers choose fabrics; developers use coding to create engaging websites. Both require aesthetic sensibility and understanding of user interaction for functional, striking creations.
+                    </p>
                 </div>
             </div>
     </div>
