--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="service-info">
                 <i class="fa-regular fa-user"></i>
                 <h4>Music Production and Web Development</h4> 
-                <p>Music production and web development create seamless experiences, both requiring technical skill and detail. Balancing sounds parallels combining design elements, with both demanding innovation and precision to engage their audience.</p>
+                <p>Music production and web development create seamless experiences, requiring technical skill and attention to detail. Both demand innovation and precision to engage their audience.</p>
             </div>
         </div>
 
@@ -116,7 +116,8 @@
                 <div class="service-info">
                     <i class="fa-regular fa-user"></i>
                     <h4>Fashion Designer</h4>
-                    <p>Fashion design and web development focus on creativity and user experience. Designers choose fabrics; developers use coding to create engaging websites. Both require aesthetic sensibility and understanding of user interaction for functional, striking creations.
+                    <p>
+                        Fashion design and web development emphasize creativity and user experience. Designers select fabrics; developers code engaging websites, both requiring aesthetic sensibility.                        
                     </p>
                 </div>
             </div>
